public class Producto {
    private String nombre;
    private double predio;

    //Constructor
    public Producto(String nombre, double predio) {
        this.nombre = nombre;
        this.predio = predio;
    }
}
